overlays/local/redis-commander/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  namespace: redis
spec:
  selector:
    app: redis-commander
  ports:
  - protocol: TCP
    port: 8081
    targetPort: http
