overlays/local/redis-commander/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-ingress
  namespace: redis
spec:
  ingressClassName: nginx
  rules:
  - host: redis.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: redis-commander-service
              port:
                number: 8081
